--- a/src/Components/Login.css
+++ b/src/Components/Login.css
@@ -31,8 +31,8 @@ form > label {
     position: absolute;
     margin-left: 17.5em;
     margin-top: 2.1em;
-    /* z-index: 1; */
-    /* font-size: 20px; */
+    z-index: 1;
+    font-size: 20px;
     cursor: pointer;
 }
 #email {
@@ -82,11 +82,7 @@ form > input, .btn {
 .facebook > button {
     background-color: blue;
 }
-.apple > button {
-    background-color: black;
-    color: white;
-}
-.google > button, .facebook > button, .apple > button {
+.google > button, .facebook > button {
     font-family: "Poppins", sans-serif;
     font-weight: 600;
     font-style: normal;
@@ -96,12 +92,9 @@ form > input, .btn {
 .google > button:hover {
     background-color: red;
 }
-.apple > button:hover {
-    background-color: black;
-}
 .facebook > button:hover {
     background-color: blue;
 }
-.google > button:hover, .apple > button:hover, .facebook > button:hover {
+.google > button:hover, .facebook > button:hover {
     color: white;
 }
