--- a/src/Components/Login.css
+++ b/src/Components/Login.css
@@ -29,8 +29,8 @@ form > label {
 }
 .show-password {
     position: absolute;
-    margin-left: 17.5em;
-    margin-top: 2.1em;
+    right: 30px;
+    top: 8px;
     z-index: 1;
     font-size: 20px;
     cursor: pointer;
