--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,6 +1,6 @@
 .nav-link {
     padding-right: 30px !important;
-    color: black;
+    color: black !important;
     font-weight: 600;
     letter-spacing: 0.3px;
     font-size: 18px;
